[gd_scene load_steps=25 format=2]

[ext_resource path="res://scripts/MainGame.gd" type="Script" id=1]
[ext_resource path="res://sprites/Pause_normal.png" type="Texture" id=2]
[ext_resource path="res://sprites/Pause_pressed.png" type="Texture" id=3]
[ext_resource path="res://sprites/Pause_disabled.png" type="Texture" id=4]
[ext_resource path="res://scripts/PauseButton.gd" type="Script" id=5]
[ext_resource path="res://sprites/TimeLeft_under.png" type="Texture" id=6]
[ext_resource path="res://sprites/TimeLeft_over.png" type="Texture" id=7]
[ext_resource path="res://sprites/TimeLeft_progress.png" type="Texture" id=8]
[ext_resource path="res://sprites/EarthIcon.png" type="Texture" id=9]
[ext_resource path="res://scripts/EarthIcon.gd" type="Script" id=10]
[ext_resource path="res://scripts/PauseScreen.gd" type="Script" id=11]
[ext_resource path="res://sprites/BlackScreen.png" type="Texture" id=12]
[ext_resource path="res://sprites/Play_normal.png" type="Texture" id=13]
[ext_resource path="res://sprites/Play_pressed.png" type="Texture" id=14]
[ext_resource path="res://sprites/Play_disabled.png" type="Texture" id=15]
[ext_resource path="res://themes/text.tres" type="Theme" id=16]
[ext_resource path="res://scripts/WipedAwayText.gd" type="Script" id=17]
[ext_resource path="res://sprites/menunormal.png" type="Texture" id=18]
[ext_resource path="res://sprites/menupressed.png" type="Texture" id=19]
[ext_resource path="res://sprites/menufocused.png" type="Texture" id=20]
[ext_resource path="res://scripts/QuitButton.gd" type="Script" id=21]

[sub_resource type="CanvasItemMaterial" id=1]

render_priority = 0
blend_mode = 1
light_mode = 0

[sub_resource type="AtlasTexture" id=2]

flags = 0
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 18, 18 )
margin = Rect2( 0, 0, 0, 0 )
filter_clip = false
_sections_unfolded = [ "Resource" ]

[sub_resource type="Environment" id=3]

background_mode = 4
background_sky_custom_fov = 0.0
background_color = Color( 0, 0, 0, 1 )
background_energy = 1.0
background_canvas_max_layer = 1
ambient_light_color = Color( 0, 0, 0, 1 )
ambient_light_energy = 1.0
ambient_light_sky_contribution = 1.0
fog_enabled = false
fog_color = Color( 0.5, 0.6, 0.7, 1 )
fog_sun_color = Color( 1, 0.9, 0.7, 1 )
fog_sun_amount = 0.0
fog_depth_enabled = true
fog_depth_begin = 10.0
fog_depth_curve = 1.0
fog_transmit_enabled = false
fog_transmit_curve = 1.0
fog_height_enabled = false
fog_height_min = 0.0
fog_height_max = 100.0
fog_height_curve = 1.0
tonemap_mode = 0
tonemap_exposure = 1.0
tonemap_white = 1.0
auto_exposure_enabled = true
auto_exposure_scale = 0.2
auto_exposure_min_luma = 0.05
auto_exposure_max_luma = 8.0
auto_exposure_speed = 0.5
ss_reflections_enabled = false
ss_reflections_max_steps = 64
ss_reflections_fade_in = 0.15
ss_reflections_fade_out = 2.0
ss_reflections_depth_tolerance = 0.2
ss_reflections_roughness = true
ssao_enabled = false
ssao_radius = 1.0
ssao_intensity = 1.0
ssao_radius2 = 0.0
ssao_intensity2 = 1.0
ssao_bias = 0.01
ssao_light_affect = 0.0
ssao_color = Color( 0, 0, 0, 1 )
ssao_quality = 0
ssao_blur = 3
ssao_edge_sharpness = 4.0
dof_blur_far_enabled = false
dof_blur_far_distance = 10.0
dof_blur_far_transition = 5.0
dof_blur_far_amount = 0.1
dof_blur_far_quality = 1
dof_blur_near_enabled = false
dof_blur_near_distance = 2.0
dof_blur_near_transition = 1.0
dof_blur_near_amount = 0.1
dof_blur_near_quality = 1
glow_enabled = true
glow_levels/1 = true
glow_levels/2 = false
glow_levels/3 = false
glow_levels/4 = false
glow_levels/5 = false
glow_levels/6 = false
glow_levels/7 = false
glow_intensity = 0.8
glow_strength = 1.0
glow_bloom = 0.5
glow_blend_mode = 0
glow_hdr_threshold = 1.0
glow_hdr_scale = 2.0
glow_bicubic_upscale = true
adjustment_enabled = true
adjustment_brightness = 1.0
adjustment_contrast = 1.0
adjustment_saturation = 0.6
_sections_unfolded = [ "Adjustments", "Auto Exposure", "Background", "Glow", "Glow/levels" ]

[node name="MainGame" type="Node" index="0"]

script = ExtResource( 1 )

[node name="CardContainer" type="Container" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Mouse" ]

[node name="OverTheCard" type="CanvasLayer" parent="." index="1"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="GUI" type="MarginContainer" parent="OverTheCard" index="0"]

material = SubResource( 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 4.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 10
custom_constants/margin_top = 5
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
_sections_unfolded = [ "Grow Direction", "Margin", "Material", "Rect", "custom_constants" ]

[node name="VBoxContainer" type="VBoxContainer" parent="OverTheCard/GUI" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 5.0
margin_right = 174.0
margin_bottom = 310.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Margin", "Visibility" ]

[node name="HBoxTopContainer" type="HBoxContainer" parent="OverTheCard/GUI/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 164.0
margin_bottom = 18.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[node name="PauseButton" type="TextureButton" parent="OverTheCard/GUI/VBoxContainer/HBoxTopContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 18.0
margin_bottom = 18.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_disabled = ExtResource( 4 )
script = ExtResource( 5 )
_sections_unfolded = [ "Textures" ]

[node name="TimeLeft" type="TextureProgress" parent="OverTheCard/GUI/VBoxContainer/HBoxTopContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 22.0
margin_right = 142.0
margin_bottom = 18.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
texture_under = ExtResource( 6 )
texture_over = ExtResource( 7 )
texture_progress = ExtResource( 8 )
fill_mode = 1
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Textures" ]

[node name="EarthIcon" type="TextureRect" parent="OverTheCard/GUI/VBoxContainer/HBoxTopContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 146.0
margin_right = 164.0
margin_bottom = 18.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = SubResource( 2 )
stretch_mode = 0
script = ExtResource( 10 )
_sections_unfolded = [ "Material", "Offset", "Textures", "Visibility" ]
Earth_Icon_Frame = Rect2( 0, 0, 18, 18 )

[node name="PauseScreen" type="Container" parent="OverTheCard" index="1"]

pause_mode = 2
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 11 )
_sections_unfolded = [ "Pause", "Visibility" ]

[node name="GrayOut" type="TextureRect" parent="OverTheCard/PauseScreen" index="0"]

modulate = Color( 1, 1, 1, 0.56502 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 12 )
stretch_mode = 0
_sections_unfolded = [ "Visibility" ]

[node name="PlayButton" type="TextureButton" parent="OverTheCard/PauseScreen" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 5.0
margin_right = 28.0
margin_bottom = 23.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 15 )
texture_disabled = ExtResource( 15 )
texture_focused = ExtResource( 15 )
_sections_unfolded = [ "Textures", "Visibility" ]

[node name="EndScreen" type="Container" parent="OverTheCard" index="2"]

pause_mode = 2
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Mouse", "Pause", "Visibility" ]

[node name="BlackOut" type="TextureRect" parent="OverTheCard/EndScreen" index="0"]

modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 12 )
stretch_mode = 0
_sections_unfolded = [ "Visibility" ]

[node name="Margins" type="MarginContainer" parent="OverTheCard/EndScreen" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
_sections_unfolded = [ "custom_constants" ]

[node name="CenterContainer" type="CenterContainer" parent="OverTheCard/EndScreen/Margins" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 10.0
margin_right = 170.0
margin_bottom = 310.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false

[node name="VBoxContainer" type="VBoxContainer" parent="OverTheCard/EndScreen/Margins/CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 118.0
margin_right = 140.0
margin_bottom = 182.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="WipedCont" type="CenterContainer" parent="OverTheCard/EndScreen/Margins/CenterContainer/VBoxContainer" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 120.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false

[node name="WipedAwayText" type="RichTextLabel" parent="OverTheCard/EndScreen/Margins/CenterContainer/VBoxContainer/WipedCont" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_right = 100.0
margin_bottom = 30.0
rect_min_size = Vector2( 80, 30 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 16 )
bbcode_enabled = true
bbcode_text = "[center]Everything... [/center][center]is wiped away.[/center]"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Everything... is wiped away."
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
script = ExtResource( 17 )
_sections_unfolded = [ "BBCode", "Rect", "Theme" ]

[node name="TextTimer" type="Timer" parent="OverTheCard/EndScreen/Margins/CenterContainer/VBoxContainer/WipedCont/WipedAwayText" index="1"]

process_mode = 1
wait_time = 0.07
one_shot = false
autostart = false

[node name="QuitBtnContainer" type="CenterContainer" parent="OverTheCard/EndScreen/Margins/CenterContainer/VBoxContainer" index="1"]

modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 34.0
margin_right = 120.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false
_sections_unfolded = [ "Visibility" ]

[node name="QuitButton" type="TextureButton" parent="OverTheCard/EndScreen/Margins/CenterContainer/VBoxContainer/QuitBtnContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 120.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )
texture_hover = ExtResource( 20 )
texture_disabled = ExtResource( 20 )
texture_focused = ExtResource( 20 )
script = ExtResource( 21 )
_sections_unfolded = [ "Textures", "Visibility" ]

[node name="QuitText" type="RichTextLabel" parent="OverTheCard/EndScreen/Margins/CenterContainer/VBoxContainer/QuitBtnContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 7.0
margin_right = 100.0
margin_bottom = 22.0
rect_min_size = Vector2( 80, 15 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 16 )
bbcode_enabled = true
bbcode_text = "[center]read your epitaph[/center]"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "read your epitaph"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "Mouse", "Theme" ]

[node name="TweenBlackOut" type="Tween" parent="OverTheCard/EndScreen" index="2"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0
_sections_unfolded = [ "playback" ]

[node name="WorldEnvironment" type="WorldEnvironment" parent="." index="2"]

environment = SubResource( 3 )


